fix background blend mode on safari

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,11 +20,13 @@ html, body {
     color: $neutral-7;
     font-size: 16px;
 
-    @supports (background-blend-mode: soft-light) {
-        background-image: none;
-        /* Texture pattern from https://www.transparenttextures.com/ */
-        background-image: url("/assets/images/patterns/buried.png");
-        background-blend-mode: soft-light;
+    &:not(.safari) {
+        @supports (background-blend-mode: soft-light) {
+            background-image: none;
+            /* Texture pattern from https://www.transparenttextures.com/ */
+            background-image: url("/assets/images/patterns/buried.png");
+            background-blend-mode: soft-light;
+        }
     }
 
     @include media-breakpoint-up(xs) {
